fixed quote before pseudo class, udpated sidebar btn to contact and skills else skills, fixed navigation menu styling to be larger on mobile.

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -97,10 +97,12 @@
 
     .mobile-nav .navbar {
         position: absolute;
-        top: 5rem;
+        top: 6rem;
         right: 1rem;
+        width: 200px;
 
         .container {
+            display: block;
 
             ul.nav-menu {
                 flex-direction: column;
@@ -109,6 +111,7 @@
                     display: block;
                     width: 100%;
                     text-align: center;
+                    font-size: larger;
                 }
 
             }
