--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -20,17 +20,18 @@
     
     .sidebar-header {
         display: grid;
+        grid-template-columns: auto 1fr;
         align-items: center;
         gap: 1rem;
-
+        margin-bottom: 1rem;
     }
 
     .avatar {
         text-align: center;
         
         img {
-            width: 125px;
-            height: 125px;
+            width: 115px;
+            height: 115px;
             border-radius: 50%;
             border: .5rem solid $accent-color;
             object-fit: cover;
@@ -41,6 +42,10 @@
     }
 
     h1.profile-name {
+        font-size: 1.5rem;
+        margin-bottom: 0;
+        text-align: center;
+        color: $white;
 
         a {
             color: $white;
@@ -69,7 +74,7 @@
             content: '';
             position: absolute;
             top: -10px;
-            left: 10%;
+            left: 2.5rem;
             width: 0;
             height: 0;
             border-bottom: 10px solid $off-white;
@@ -103,13 +108,12 @@
 
     .sidebar-btn {
         display: none;
-        margin-left: 50%;
-        height: 2rem;
-        width: 2rem;
         border: none;
-        border-radius: 100%;
-        background-color: $accent-color;
+        border-radius: 1rem;
+        background-color: $primary-color;
         color: $white;
+        padding: .5rem 1rem;
+        margin: 0 auto;
     }
 
 
@@ -198,14 +202,14 @@
         padding: 1rem;
 
         .avatar img {
-            height: 75px;
-            width: 75px;
-            border: .25rem solid $accent-color;
+            height: 100px;
+            width: 100px;
+            border: .33rem solid $accent-color;
             object-position: top -1rem left 0;
         }
 
         .profile-name {
-            font-size: 1.25rem;
+            font-size: 1.5rem;
         }
     }
 
